force-app/main/default/objects/Release_Note__c/Release_Note__c.object-meta.xml
<CustomObject>
    <label>Release Note</label>
    <pluralLabel>Release Notes</pluralLabel>
    <description>One row per Skywave Interactive release (a git tag / GitHub Release). Populated by the release-notes GitHub Action (upsert by Version__c). The Demo Home changelog panel lists the most recent rows.</description>
    <nameField>
        <label>Release Note Number</label>
        <type>AutoNumber</type>
        <displayFormat>RN-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>