force-app/main/default/objects/Release_Note__c/fields/GitHub_Url__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Url__c</fullName>
    <label>GitHub URL</label>
    <description>Link to the GitHub Release for this version. Optional; rendered as a "view on GitHub" link in the changelog panel.</description>
    <type>Url</type>
</CustomField>