force-app/main/default/objects/Release_Note__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>The major changes in this release — feat/fix/etc. commit subjects grouped, generated from commits since the previous tag. Plain text with line breaks; the changelog panel preserves them.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>