force-app/main/default/objects/Release_Note__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <label>Release Date</label>
    <description>When the release was published (the GitHub Release published_at). Drives the newest-first ordering in the Demo Home changelog.</description>
    <type>DateTime</type>
</CustomField>