force-app/main/default/objects/Release_Note__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <description>Optional release headline (the GitHub Release name/title). Shown above the notes in the changelog panel.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>