force-app/main/default/objects/Release_Note__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <description>The release version, e.g. 1.3.0 (the git tag without a leading v). External Id + Unique so the release-notes GitHub Action can idempotently upsert by version.</description>
    <type>Text</type>
    <length>40</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <required>true</required>
</CustomField>